<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <Button
            android:text="@string/app_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDelete" app:layout_constraintStart_toStartOf="@+id/btnPut"
            app:layout_constraintEnd_toEndOf="@+id/btnPut" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btnPut" app:layout_constraintHorizontal_bias="0.55"/>
    <Button
            android:text="@string/app_put"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnPut"
            app:layout_constraintStart_toStartOf="@+id/btnPost" app:layout_constraintEnd_toEndOf="@+id/btnPost"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/btnPost"
            app:layout_constraintHorizontal_bias="0.588"/>
    <Button
            android:text="@string/app_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnPost" app:layout_constraintStart_toStartOf="@+id/btnGet"
            app:layout_constraintEnd_toEndOf="@+id/btnGet" android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/btnGet" app:layout_constraintHorizontal_bias="0.571"/>
    <TextView
            android:text="@string/app_titulo"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:textSize="24sp" android:textAlignment="center"/>
    <Button
            android:text="@string/app_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnGet"
            app:layout_constraintStart_toStartOf="@+id/txtTabletas"
            app:layout_constraintEnd_toEndOf="@+id/txtTabletas" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/txtTabletas"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtNombre"
            android:hint="@string/nombre"
            app:layout_constraintStart_toStartOf="@+id/textView" app:layout_constraintEnd_toEndOf="@+id/textView"
            android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.523"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtCosto"
            android:hint="@string/costo"
            app:layout_constraintStart_toStartOf="@+id/txtNombre" app:layout_constraintEnd_toEndOf="@+id/txtNombre"
            android:layout_marginTop="20dp" app:layout_constraintTop_toBottomOf="@+id/txtNombre"
            app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/txtTabletas"
            app:layout_constraintStart_toStartOf="@+id/txtCosto"
            app:layout_constraintEnd_toEndOf="@+id/txtCosto" android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/txtCosto" app:layout_constraintHorizontal_bias="0.0"
            android:hint="@string/tabletas"/>
</android.support.constraint.ConstraintLayout>